--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "web-vitals": "^1.0.1"
